src/objects/Doctor__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Doctors</relationshipLabel>
        <relationshipName>Doctors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Specialities__c</fullName>
        <label>Additional Specialities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>&quot;Surgery</fullName><default>false</default><label>&quot;Surgery</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Assigned_Parking__c</fullName>
        <inlineHelpText>Enter the number of the parking assigned to the doctor in hospital permises</inlineHelpText>
        <label>Assigned Parking</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bio__c</fullName>
        <inlineHelpText>&quot;A complete Bio Data of the doctor</inlineHelpText>
        <label>Bio</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Blog__c</fullName>
        <inlineHelpText>Enter the UrL of the blog (if any) published by the doctor.</inlineHelpText>
        <label>Blog</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Blog_new__c</fullName>
        <inlineHelpText>Enter the UrL of the blog (if any) published by the doctor.</inlineHelpText>
        <label>Blog@*^*&amp;!%new</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Comission_per_Addmission__c</fullName>
        <inlineHelpText>Enter the percent of commission assigned to the doctor per addmission</inlineHelpText>
        <label>Comission per Addmission</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Date of Birth</description>
        <inlineHelpText>Enter the date of birth</inlineHelpText>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <description>Date of Joining</description>
        <inlineHelpText>Enter the Doctor&apos;s Date of joining</inlineHelpText>
        <label>Date of Joining</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email Address</description>
        <inlineHelpText>Enter the official Email address</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fixed_Salary__c</fullName>
        <label>Fixed Salary</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>&quot;Male</fullName><default>false</default><label>&quot;Male</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <inlineHelpText>Enter the doctor&apos;s name with salutation</inlineHelpText>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Speciality__c</fullName>
        <inlineHelpText>Enter the area the doctor primarily specializes in</inlineHelpText>
        <label>Primary Speciality</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residence__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the doctor is a residence.</inlineHelpText>
        <label>Residence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <inlineHelpText>A short description of the doctor as appears on the website</inlineHelpText>
        <label>Short Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>encry__c</fullName>
        <label>encry</label>
        <length>24</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>location2__c</fullName>
        <label>location2</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>locationnnnnnnnnn__c</fullName>
        <label>locationnnnnnnnnn</label>
        <scale>14</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>multiselect_picklist__c</fullName>
        <label>multiselect picklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>A</fullName><default>false</default><label>A</label></value>
                <value><fullName>B</fullName><default>false</default><label>B</label></value>
                <value><fullName>C</fullName><default>false</default><label>C</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rich__c</fullName>
        <label>rich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>test2__c</fullName>
        <label>test2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <type>AutoNumber</type>
    </fields>
    <label>Doctor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Doctor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>